--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,6 +12,30 @@ body {
 
 /* Image carousel */
 
+.main--title{
+    color: white;
+    font-size: 7em;
+    font-weight: 100;
+    margin-left: 10%;
+    width: 510px;
+    line-height: 90px;
+    transform: translateX(30%);
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.main--title.ended{
+    transform: translateX(0);
+    opacity: 1;
+    mix-blend-mode: soft-light;
+}
+
+.main--title.ended:after {
+    /* This value is the OPPOSITE color of our background */
+    color: rgb(0, 255, 255);
+
+}
+
 :root {
     --card-height: 180px;
     --card-width: 150px;
